--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "magnific-popup": "^1.1.0",
         "moment": "^2.15.2",
         "node-sass": "^4.10.0",
+        "owl.carousel": "^2.3.4",
         "parsleyjs": "^2.6.0",
         "popper.js": "^1.14.4",
         "tether": "^1.4.0"
